--- a/openApiDocs/beta/Bookings.yml
+++ b/openApiDocs/beta/Bookings.yml
@@ -288,11 +288,8 @@ paths:
     get:
       tags:
         - bookingBusinesses.bookingAppointment
-      summary: List appointments
-      description: Get a list of bookingAppointment objects for the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-appointments?view=graph-rest-1.0
+      summary: Get appointments from bookingBusinesses
+      description: All the appointments of this business. Read-only. Nullable.
       operationId: bookingBusiness_ListAppointment
       parameters:
         - name: bookingBusiness-id
@@ -465,11 +462,7 @@ paths:
     post:
       tags:
         - bookingBusinesses.bookingAppointment
-      summary: Create bookingAppointment
-      description: Create a new bookingAppointment for the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-appointments?view=graph-rest-1.0
+      summary: Create new navigation property to appointments for bookingBusinesses
       operationId: bookingBusiness_CreateAppointment
       parameters:
         - name: bookingBusiness-id
@@ -669,10 +662,7 @@ paths:
       tags:
         - bookingBusinesses.Actions
       summary: Invoke action cancel
-      description: 'Cancel the specified bookingAppointment in the specified bookingBusiness, and send a message to the involved customer and staff members.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingappointment-cancel?view=graph-rest-1.0
+      description: 'Cancels the giving booking appointment, sending a message to the involved parties.'
       operationId: bookingBusiness.appointment_cancel
       parameters:
         - name: bookingBusiness-id
@@ -738,9 +728,6 @@ paths:
         - bookingBusinesses.bookingAppointment
       summary: Get calendarView from bookingBusinesses
       description: The set of appointments of this business in a specified date range. Read-only. Nullable.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-calendarview?view=graph-rest-1.0
       operationId: bookingBusiness_ListCalendarView
       parameters:
         - name: bookingBusiness-id
@@ -1145,10 +1132,7 @@ paths:
       tags:
         - bookingBusinesses.Actions
       summary: Invoke action cancel
-      description: 'Cancel the specified bookingAppointment in the specified bookingBusiness, and send a message to the involved customer and staff members.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingappointment-cancel?view=graph-rest-1.0
+      description: 'Cancels the giving booking appointment, sending a message to the involved parties.'
       operationId: bookingBusiness.calendarView_cancel
       parameters:
         - name: bookingBusiness-id
@@ -1212,11 +1196,8 @@ paths:
     get:
       tags:
         - bookingBusinesses.bookingCustomer
-      summary: List customers
-      description: Get a list of bookingCustomer objects.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-customers?view=graph-rest-1.0
+      summary: Get customers from bookingBusinesses
+      description: All the customers of this business. Read-only. Nullable.
       operationId: bookingBusiness_ListCustomer
       parameters:
         - name: bookingBusiness-id
@@ -1293,11 +1274,7 @@ paths:
     post:
       tags:
         - bookingBusinesses.bookingCustomer
-      summary: Create bookingCustomer
-      description: Create a new bookingCustomer object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-customers?view=graph-rest-1.0
+      summary: Create new navigation property to customers for bookingBusinesses
       operationId: bookingBusiness_CreateCustomer
       parameters:
         - name: bookingBusiness-id
@@ -1486,11 +1463,8 @@ paths:
     get:
       tags:
         - bookingBusinesses.bookingCustomQuestion
-      summary: List customQuestions
-      description: Get the bookingCustomQuestion resources associated with a bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-customquestions?view=graph-rest-1.0
+      summary: Get customQuestions from bookingBusinesses
+      description: All the custom questions of this business. Read-only. Nullable.
       operationId: bookingBusiness_ListCustomQuestion
       parameters:
         - name: bookingBusiness-id
@@ -1753,10 +1727,6 @@ paths:
       tags:
         - bookingBusinesses.Actions
       summary: Invoke action getStaffAvailability
-      description: Get the availability information of staff members of a Microsoft Bookings calendar.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-getstaffavailability?view=graph-rest-1.0
       operationId: bookingBusiness_getStaffAvailability
       parameters:
         - name: bookingBusiness-id
@@ -1813,10 +1783,7 @@ paths:
       tags:
         - bookingBusinesses.Actions
       summary: Invoke action publish
-      description: 'Make the scheduling page of this business available to external customers. Set the **isPublished** property to true, and **publicUrl** property to the URL of the scheduling page.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-publish?view=graph-rest-1.0
+      description: Makes the scheduling page of this business available to the general public.
       operationId: bookingBusiness_publish
       parameters:
         - name: bookingBusiness-id
@@ -1838,10 +1805,7 @@ paths:
       tags:
         - bookingBusinesses.Actions
       summary: Invoke action unpublish
-      description: 'Make the scheduling page of this business not available to external customers. Set the **isPublished** property to false, and **publicUrl** property to null.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-unpublish?view=graph-rest-1.0
+      description: Prevents the general public from seeing the scheduling page of this business.
       operationId: bookingBusiness_unpublish
       parameters:
         - name: bookingBusiness-id
@@ -1862,11 +1826,8 @@ paths:
     get:
       tags:
         - bookingBusinesses.bookingService
-      summary: List services
-      description: Get a list of bookingService objects in the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-services?view=graph-rest-1.0
+      summary: Get services from bookingBusinesses
+      description: All the services offered by this business. Read-only. Nullable.
       operationId: bookingBusiness_ListService
       parameters:
         - name: bookingBusiness-id
@@ -1994,11 +1955,7 @@ paths:
     post:
       tags:
         - bookingBusinesses.bookingService
-      summary: Create bookingService
-      description: Create a new bookingService for the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-services?view=graph-rest-1.0
+      summary: Create new navigation property to services for bookingBusinesses
       operationId: bookingBusiness_CreateService
       parameters:
         - name: bookingBusiness-id
@@ -2204,11 +2161,8 @@ paths:
     get:
       tags:
         - bookingBusinesses.bookingStaffMember
-      summary: List staffMembers
-      description: Get a list of bookingStaffMember objects in the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-staffmembers?view=graph-rest-1.0
+      summary: Get staffMembers from bookingBusinesses
+      description: All the staff members that provide services in this business. Read-only. Nullable.
       operationId: bookingBusiness_ListStaffMember
       parameters:
         - name: bookingBusiness-id
@@ -2303,11 +2257,7 @@ paths:
     post:
       tags:
         - bookingBusinesses.bookingStaffMember
-      summary: Create bookingStaffMember
-      description: Create a new staff member in the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-staffmembers?view=graph-rest-1.0
+      summary: Create new navigation property to staffMembers for bookingBusinesses
       operationId: bookingBusiness_CreateStaffMember
       parameters:
         - name: bookingBusiness-id
@@ -2792,11 +2742,7 @@ paths:
     get:
       tags:
         - solutions.businessScenario
-      summary: List businessScenarios
-      description: Get a list of all businessScenario objects in an organization.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/solutionsroot-list-businessscenarios?view=graph-rest-1.0
+      summary: Get businessScenarios from solutions
       operationId: solution_ListBusinessScenario
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2876,11 +2822,7 @@ paths:
     post:
       tags:
         - solutions.businessScenario
-      summary: Create businessScenario
-      description: Create a new businessScenario object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/solutionsroot-post-businessscenarios?view=graph-rest-1.0
+      summary: Create new navigation property to businessScenarios for solutions
       operationId: solution_CreateBusinessScenario
       requestBody:
         description: New navigation property
@@ -3018,11 +2960,8 @@ paths:
     get:
       tags:
         - solutions.businessScenario
-      summary: Get businessScenarioPlanner
-      description: Read the properties and relationships of a businessScenarioPlanner object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/businessscenarioplanner-get?view=graph-rest-1.0
+      summary: Get planner from solutions
+      description: Planner content related to the scenario.
       operationId: solution.businessScenario_GetPlanner
       parameters:
         - name: businessScenario-id
@@ -3135,10 +3074,6 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action getPlan
-      description: 'Get information about the plannerPlan mapped to a given target. If a **plannerPlan** doesn''t exist for the specified target at the time of the request, a new plan will be created for the businessScenario.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/businessscenarioplanner-getplan?view=graph-rest-1.0
       operationId: solution.businessScenario.planner_getPlan
       parameters:
         - name: businessScenario-id
@@ -3175,11 +3110,8 @@ paths:
     get:
       tags:
         - solutions.businessScenario
-      summary: Get plannerPlanConfiguration
-      description: Read the properties and relationships of a plannerPlanConfiguration object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/plannerplanconfiguration-get?view=graph-rest-1.0
+      summary: Get planConfiguration from solutions
+      description: The configuration of Planner plans that will be created for the scenario.
       operationId: solution.businessScenario.planner_GetPlanConfiguration
       parameters:
         - name: businessScenario-id
@@ -3235,11 +3167,7 @@ paths:
     patch:
       tags:
         - solutions.businessScenario
-      summary: Update plannerPlanConfiguration
-      description: Update the properties of a plannerPlanConfiguration object for a businessScenario.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/plannerplanconfiguration-update?view=graph-rest-1.0
+      summary: Update the navigation property planConfiguration in solutions
       operationId: solution.businessScenario.planner_UpdatePlanConfiguration
       parameters:
         - name: businessScenario-id
@@ -3297,11 +3225,8 @@ paths:
     get:
       tags:
         - solutions.businessScenario
-      summary: List plannerPlanConfigurationLocalizations
-      description: Get a list of the plannerPlanConfigurationLocalization objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/plannerplanconfiguration-list-localizations?view=graph-rest-1.0
+      summary: Get localizations from solutions
+      description: Localized names for the plan configuration.
       operationId: solution.businessScenario.planner.planConfiguration_ListLocalization
       parameters:
         - name: businessScenario-id
@@ -3375,11 +3300,7 @@ paths:
     post:
       tags:
         - solutions.businessScenario
-      summary: Create plannerPlanConfigurationLocalization
-      description: Create a new plannerPlanConfigurationLocalization object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/plannerplanconfiguration-post-localizations?view=graph-rest-1.0
+      summary: Create new navigation property to localizations for solutions
       operationId: solution.businessScenario.planner.planConfiguration_CreateLocalization
       parameters:
         - name: businessScenario-id
@@ -3567,11 +3488,8 @@ paths:
     get:
       tags:
         - solutions.businessScenario
-      summary: Get plannerTaskConfiguration
-      description: Read the properties and relationships of a plannerTaskConfiguration object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/plannertaskconfiguration-get?view=graph-rest-1.0
+      summary: Get taskConfiguration from solutions
+      description: The configuration of Planner tasks that will be created for the scenario.
       operationId: solution.businessScenario.planner_GetTaskConfiguration
       parameters:
         - name: businessScenario-id
@@ -3620,11 +3538,7 @@ paths:
     patch:
       tags:
         - solutions.businessScenario
-      summary: Update plannerTaskConfiguration
-      description: Update the properties of a plannerTaskConfiguration object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/plannertaskconfiguration-update?view=graph-rest-1.0
+      summary: Update the navigation property taskConfiguration in solutions
       operationId: solution.businessScenario.planner_UpdateTaskConfiguration
       parameters:
         - name: businessScenario-id
@@ -3682,11 +3596,8 @@ paths:
     get:
       tags:
         - solutions.businessScenario
-      summary: List businessScenarioTasks
-      description: Get a list of the businessScenarioTask objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/businessscenarioplanner-list-tasks?view=graph-rest-1.0
+      summary: Get tasks from solutions
+      description: The Planner tasks for the scenario.
       operationId: solution.businessScenario.planner_ListTask
       parameters:
         - name: businessScenario-id
@@ -3834,11 +3745,7 @@ paths:
     post:
       tags:
         - solutions.businessScenario
-      summary: Create businessScenarioTask
-      description: Create a new businessScenarioTask object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/businessscenarioplanner-post-tasks?view=graph-rest-1.0
+      summary: Create new navigation property to tasks for solutions
       operationId: solution.businessScenario.planner_CreateTask
       parameters:
         - name: businessScenario-id
