--- a/openApiDocs/beta/ManagedTenants.yml
+++ b/openApiDocs/beta/ManagedTenants.yml
@@ -166,11 +166,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List aggregatedPolicyCompliances
-      description: Get a list of the aggregatedPolicyCompliance objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-aggregatedpolicycompliances?view=graph-rest-1.0
+      summary: Get aggregatedPolicyCompliances from tenantRelationships
+      description: Aggregate view of device compliance policies across managed tenants.
       operationId: tenantRelationship.managedTenant_ListAggregatedPolicyCompliance
       parameters:
         - $ref: '#/components/parameters/top'
@@ -909,11 +906,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List cloudPcConnections
-      description: Get a list of the cloudPcConnection objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-cloudpcconnections?view=graph-rest-1.0
+      summary: Get cloudPcConnections from tenantRelationships
+      description: The collection of cloud PC connections across managed tenants.
       operationId: tenantRelationship.managedTenant_ListCloudPcConnection
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1134,11 +1128,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List cloudPcDevices
-      description: Get a list of the cloudPcDevice objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-cloudpcdevices?view=graph-rest-1.0
+      summary: Get cloudPcDevices from tenantRelationships
+      description: The collection of cloud PC devices across managed tenants.
       operationId: tenantRelationship.managedTenant_ListCloudPcDevice
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1387,11 +1378,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List cloudPcOverviews
-      description: Get a list of the cloudPcOverview objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-cloudpcsoverview?view=graph-rest-1.0
+      summary: Get cloudPcsOverview from tenantRelationships
+      description: Overview of cloud PC information across managed tenants.
       operationId: tenantRelationship.managedTenant_ListCloudPcsOverview
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1672,11 +1660,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List conditionalAccessPolicyCoverages
-      description: Get a list of the conditionalAccessPolicyCoverage objects and their properties. Use this operation to list of Azure Active Directory conditional access policy coverage across all tenants that are being managed by the multi-tenant management platform.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-conditionalaccesspolicycoverages?view=graph-rest-1.0
+      summary: Get conditionalAccessPolicyCoverages from tenantRelationships
+      description: Aggregate view of conditional access policy coverage across managed tenants.
       operationId: tenantRelationship.managedTenant_ListConditionalAccessPolicyCoverage
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1893,11 +1878,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List credentialUserRegistrationsSummaries
-      description: Get a list of the credentialUserRegistrationsSummary objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-credentialuserregistrationssummaries?view=graph-rest-1.0
+      summary: Get credentialUserRegistrationsSummaries from tenantRelationships
+      description: Summary information for user registration for multi-factor authentication and self service password reset across managed tenants.
       operationId: tenantRelationship.managedTenant_ListCredentialUserRegistrationsSummary
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2406,11 +2388,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List deviceCompliancePolicySettingStateSummary
-      description: Get a list of the deviceCompliancePolicySettingStateSummary objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-devicecompliancepolicysettingstatesummary?view=graph-rest-1.0
+      summary: Get deviceCompliancePolicySettingStateSummaries from tenantRelationships
+      description: Summary information for device compliance policy setting states across managed tenants.
       operationId: tenantRelationship.managedTenant_ListDeviceCompliancePolicySettingStateSummary
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2923,11 +2902,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List managedDeviceCompliances
-      description: Get a list of the managedDeviceCompliance objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-manageddevicecompliances?view=graph-rest-1.0
+      summary: Get managedDeviceCompliances from tenantRelationships
+      description: The collection of compliance for managed devices across managed tenants.
       operationId: tenantRelationship.managedTenant_ListManagedDeviceCompliance
       parameters:
         - $ref: '#/components/parameters/top'
@@ -3184,11 +3160,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List managedDeviceComplianceTrends
-      description: Get a list of the managedDeviceComplianceTrend objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-manageddevicecompliancetrends?view=graph-rest-1.0
+      summary: Get managedDeviceComplianceTrends from tenantRelationships
+      description: Trend insights for device compliance across managed tenants.
       operationId: tenantRelationship.managedTenant_ListManagedDeviceComplianceTrend
       parameters:
         - $ref: '#/components/parameters/top'
@@ -6401,11 +6374,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List managementActions
-      description: Get a list of the managementAction objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-managementactions?view=graph-rest-1.0
+      summary: Get managementActions from tenantRelationships
+      description: The collection of baseline management actions across managed tenants.
       operationId: tenantRelationship.managedTenant_ListManagementAction
       parameters:
         - $ref: '#/components/parameters/top'
@@ -6630,11 +6600,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List managementActionTenantDeploymentStatus
-      description: Get a list of the managementActionTenantDeploymentStatus objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-managementactiontenantdeploymentstatuses?view=graph-rest-1.0
+      summary: Get managementActionTenantDeploymentStatuses from tenantRelationships
+      description: The tenant level status of management actions across managed tenants.
       operationId: tenantRelationship.managedTenant_ListManagementActionTenantDeploymentStatus
       parameters:
         - $ref: '#/components/parameters/top'
@@ -6847,11 +6814,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List managementIntents
-      description: Get a list of the managementIntent objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-managementintents?view=graph-rest-1.0
+      summary: Get managementIntents from tenantRelationships
+      description: The collection of baseline management intents across managed tenants.
       operationId: tenantRelationship.managedTenant_ListManagementIntent
       parameters:
         - $ref: '#/components/parameters/top'
@@ -7777,11 +7741,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List managementTemplates
-      description: Get a list of the managementTemplate objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-managementtemplates?view=graph-rest-1.0
+      summary: Get managementTemplates from tenantRelationships
+      description: The collection of baseline management templates across managed tenants.
       operationId: tenantRelationship.managedTenant_ListManagementTemplate
       parameters:
         - $ref: '#/components/parameters/top'
@@ -9963,11 +9924,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List myRoles
-      description: "Get the roles that a signed-in user has through a delegated relationship across managed tenants. For information on the types of delegated relationships between a Managed Service Provider (MSP) who uses Microsoft 365 Lighthouse, and their business customers with Microsoft 365 Business Premium tenants, see the following articles on the Partner Center:\n- Delegated administration privileges (DAP)\n- Granular delegated admin privileges (GDAP)"
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-myroles?view=graph-rest-1.0
+      summary: Get myRoles from tenantRelationships
+      description: The collection of role assignments to a signed-in user for a managed tenant.
       operationId: tenantRelationship.managedTenant_ListMyRole
       parameters:
         - $ref: '#/components/parameters/top'
@@ -10172,11 +10130,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List tenantGroups
-      description: Get a list of the tenantGroup objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-tenantgroups?view=graph-rest-1.0
+      summary: Get tenantGroups from tenantRelationships
+      description: The collection of a logical grouping of managed tenants used by the multi-tenant management platform.
       operationId: tenantRelationship.managedTenant_ListTenantGroup
       parameters:
         - $ref: '#/components/parameters/top'
@@ -10397,11 +10352,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List tenants
-      description: Get a list of the tenant objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-tenants?view=graph-rest-1.0
+      summary: Get tenants from tenantRelationships
+      description: The collection of tenants associated with the managing entity.
       operationId: tenantRelationship.managedTenant_ListTenant
       parameters:
         - $ref: '#/components/parameters/top'
@@ -10626,11 +10578,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List tenantCustomizedInformation
-      description: Get a list of the tenantCustomizedInformation objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-tenantscustomizedinformation?view=graph-rest-1.0
+      summary: Get tenantsCustomizedInformation from tenantRelationships
+      description: The collection of tenant level customized information across managed tenants.
       operationId: tenantRelationship.managedTenant_ListTenantsCustomizedInformation
       parameters:
         - $ref: '#/components/parameters/top'
@@ -10847,11 +10796,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List tenantDetailedInformation
-      description: Get a list of the tenantDetailedInformation objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-tenantsdetailedinformation?view=graph-rest-1.0
+      summary: Get tenantsDetailedInformation from tenantRelationships
+      description: The collection tenant level detailed information across managed tenants.
       operationId: tenantRelationship.managedTenant_ListTenantsDetailedInformation
       parameters:
         - $ref: '#/components/parameters/top'
@@ -11092,11 +11038,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List tenantTags
-      description: Get a list of the tenantTag objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-tenanttags?view=graph-rest-1.0
+      summary: Get tenantTags from tenantRelationships
+      description: The collection of tenant tags across managed tenants.
       operationId: tenantRelationship.managedTenant_ListTenantTag
       parameters:
         - $ref: '#/components/parameters/top'
@@ -11177,11 +11120,7 @@ paths:
     post:
       tags:
         - tenantRelationships.managedTenant
-      summary: Create tenantTag
-      description: Create a new tenantTag object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-post-tenanttags?view=graph-rest-1.0
+      summary: Create new navigation property to tenantTags for tenantRelationships
       operationId: tenantRelationship.managedTenant_CreateTenantTag
       requestBody:
         description: New navigation property
@@ -11333,11 +11272,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List windowsDeviceMalwareStates
-      description: Get a list of the windowsDeviceMalwareState objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-windowsdevicemalwarestates?view=graph-rest-1.0
+      summary: Get windowsDeviceMalwareStates from tenantRelationships
+      description: 'The state of malware for Windows devices, registered with Microsoft Endpoint Manager, across managed tenants.'
       operationId: tenantRelationship.managedTenant_ListWindowsDeviceMalwareState
       parameters:
         - $ref: '#/components/parameters/top'
@@ -11602,11 +11538,8 @@ paths:
     get:
       tags:
         - tenantRelationships.managedTenant
-      summary: List windowsProtectionStates
-      description: Get a list of the windowsProtectionState objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/managedtenants-managedtenant-list-windowsprotectionstates?view=graph-rest-1.0
+      summary: Get windowsProtectionStates from tenantRelationships
+      description: 'The protection state for Windows devices, registered with Microsoft Endpoint Manager, across managed tenants.'
       operationId: tenantRelationship.managedTenant_ListWindowsProtectionState
       parameters:
         - $ref: '#/components/parameters/top'
