--- a/openApiDocs/v1.0/Bookings.yml
+++ b/openApiDocs/v1.0/Bookings.yml
@@ -76,11 +76,7 @@ paths:
     get:
       tags:
         - solutions.bookingBusiness
-      summary: List bookingBusinesses
-      description: 'Get a collection of bookingBusiness objects that has been created for the tenant. This operation returns only the **id** and **displayName** of each Microsoft Bookings business in the collection. For performance considerations, it does not return other properties. You can get the other properties of a Bookings business by specifying its **id** in a GET operation.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list?view=graph-rest-1.0
+      summary: Get bookingBusinesses from solutions
       operationId: solution_ListBookingBusiness
       parameters:
         - $ref: '#/components/parameters/top'
@@ -185,11 +181,7 @@ paths:
     post:
       tags:
         - solutions.bookingBusiness
-      summary: Create bookingBusiness
-      description: 'Create a new Microsoft Bookings business in a tenant. This is the first step in setting up a Bookings business where you must specify the business display name. You can include other information such as business address, web site address, and scheduling policy, or set that information later by updating the **bookingBusiness**.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-bookingbusinesses?view=graph-rest-1.0
+      summary: Create new navigation property to bookingBusinesses for solutions
       operationId: solution_CreateBookingBusiness
       requestBody:
         description: New navigation property
@@ -342,11 +334,8 @@ paths:
     get:
       tags:
         - solutions.bookingBusiness
-      summary: List appointments
-      description: Get a list of bookingAppointment objects for the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-appointments?view=graph-rest-1.0
+      summary: Get appointments from solutions
+      description: All the appointments of this business. Read-only. Nullable.
       operationId: solution.bookingBusiness_ListAppointment
       parameters:
         - name: bookingBusiness-id
@@ -483,11 +472,7 @@ paths:
     post:
       tags:
         - solutions.bookingBusiness
-      summary: Create bookingAppointment
-      description: Create a new bookingAppointment for the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-appointments?view=graph-rest-1.0
+      summary: Create new navigation property to appointments for solutions
       operationId: solution.bookingBusiness_CreateAppointment
       parameters:
         - name: bookingBusiness-id
@@ -675,10 +660,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action cancel
-      description: Cancel the specified bookingAppointment in the specified bookingBusiness and send a message to the involved customer and staff members.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingappointment-cancel?view=graph-rest-1.0
+      description: 'Cancels the giving booking appointment, sending a message to the involved parties.'
       operationId: solution.bookingBusiness.appointment_cancel
       parameters:
         - name: bookingBusiness-id
@@ -744,9 +726,6 @@ paths:
         - solutions.bookingBusiness
       summary: Get calendarView from solutions
       description: The set of appointments of this business in a specified date range. Read-only. Nullable.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-calendarview?view=graph-rest-1.0
       operationId: solution.bookingBusiness_ListCalendarView
       parameters:
         - name: bookingBusiness-id
@@ -1103,10 +1082,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action cancel
-      description: Cancel the specified bookingAppointment in the specified bookingBusiness and send a message to the involved customer and staff members.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingappointment-cancel?view=graph-rest-1.0
+      description: 'Cancels the giving booking appointment, sending a message to the involved parties.'
       operationId: solution.bookingBusiness.calendarView_cancel
       parameters:
         - name: bookingBusiness-id
@@ -1170,11 +1146,8 @@ paths:
     get:
       tags:
         - solutions.bookingBusiness
-      summary: List customers
-      description: Get a list of bookingCustomer objects of a business.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-customers?view=graph-rest-1.0
+      summary: Get customers from solutions
+      description: All the customers of this business. Read-only. Nullable.
       operationId: solution.bookingBusiness_ListCustomer
       parameters:
         - name: bookingBusiness-id
@@ -1239,11 +1212,7 @@ paths:
     post:
       tags:
         - solutions.bookingBusiness
-      summary: Create bookingCustomer
-      description: Create a new bookingCustomer object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-customers?view=graph-rest-1.0
+      summary: Create new navigation property to customers for solutions
       operationId: solution.bookingBusiness_CreateCustomer
       parameters:
         - name: bookingBusiness-id
@@ -1428,11 +1397,8 @@ paths:
     get:
       tags:
         - solutions.bookingBusiness
-      summary: List customQuestions
-      description: Get the bookingCustomQuestion resources associated with a bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-customquestions?view=graph-rest-1.0
+      summary: Get customQuestions from solutions
+      description: All the custom questions of this business. Read-only. Nullable.
       operationId: solution.bookingBusiness_ListCustomQuestion
       parameters:
         - name: bookingBusiness-id
@@ -1506,11 +1472,7 @@ paths:
     post:
       tags:
         - solutions.bookingBusiness
-      summary: Create bookingCustomQuestion
-      description: Create a new bookingCustomQuestion object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-customquestions?view=graph-rest-1.0
+      summary: Create new navigation property to customQuestions for solutions
       operationId: solution.bookingBusiness_CreateCustomQuestion
       parameters:
         - name: bookingBusiness-id
@@ -1699,10 +1661,6 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action getStaffAvailability
-      description: Get the availability information of staff members of a Microsoft Bookings calendar.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-getstaffavailability?view=graph-rest-1.0
       operationId: solution.bookingBusiness_getStaffAvailability
       parameters:
         - name: bookingBusiness-id
@@ -1759,10 +1717,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action publish
-      description: 'Make the scheduling page of a business available to external customers. Set the **isPublished** property to `true`, and the **publicUrl** property to the URL of the scheduling page.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-publish?view=graph-rest-1.0
+      description: Makes the scheduling page of this business available to the general public.
       operationId: solution.bookingBusiness_publish
       parameters:
         - name: bookingBusiness-id
@@ -1784,10 +1739,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action unpublish
-      description: 'Make the scheduling page of this business not available to external customers. Set the **isPublished** property to `false`, and the **publicUrl** property to `null`.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-unpublish?view=graph-rest-1.0
+      description: Prevents the general public from seeing the scheduling page of this business.
       operationId: solution.bookingBusiness_unpublish
       parameters:
         - name: bookingBusiness-id
@@ -1808,11 +1760,8 @@ paths:
     get:
       tags:
         - solutions.bookingBusiness
-      summary: List services
-      description: Get a list of bookingService objects in the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-services?view=graph-rest-1.0
+      summary: Get services from solutions
+      description: All the services offered by this business. Read-only. Nullable.
       operationId: solution.bookingBusiness_ListService
       parameters:
         - name: bookingBusiness-id
@@ -1940,11 +1889,7 @@ paths:
     post:
       tags:
         - solutions.bookingBusiness
-      summary: Create bookingService
-      description: Create a new bookingService for the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-services?view=graph-rest-1.0
+      summary: Create new navigation property to services for solutions
       operationId: solution.bookingBusiness_CreateService
       parameters:
         - name: bookingBusiness-id
@@ -2150,11 +2095,8 @@ paths:
     get:
       tags:
         - solutions.bookingBusiness
-      summary: List staffMembers
-      description: Get a list of bookingStaffMember objects in the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-list-staffmembers?view=graph-rest-1.0
+      summary: Get staffMembers from solutions
+      description: All the staff members that provide services in this business. Read-only. Nullable.
       operationId: solution.bookingBusiness_ListStaffMember
       parameters:
         - name: bookingBusiness-id
@@ -2219,11 +2161,7 @@ paths:
     post:
       tags:
         - solutions.bookingBusiness
-      summary: Create bookingStaffMember
-      description: Create a new bookingStaffMember in the specified bookingBusiness.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingbusiness-post-staffmembers?view=graph-rest-1.0
+      summary: Create new navigation property to staffMembers for solutions
       operationId: solution.bookingBusiness_CreateStaffMember
       parameters:
         - name: bookingBusiness-id
@@ -2422,11 +2360,7 @@ paths:
     get:
       tags:
         - solutions.bookingCurrency
-      summary: List bookingCurrencies
-      description: Get a list of bookingCurrency objects available to a Microsoft Bookings business.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/bookingcurrency-list?view=graph-rest-1.0
+      summary: Get bookingCurrencies from solutions
       operationId: solution_ListBookingCurrency
       parameters:
         - $ref: '#/components/parameters/top'
