--- a/openApiDocs/v1.0/Devices.CloudPrint.yml
+++ b/openApiDocs/v1.0/Devices.CloudPrint.yml
@@ -85,11 +85,8 @@ paths:
     get:
       tags:
         - print.printConnector
-      summary: List printConnectors
-      description: Retrieve a list of print connectors.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-list-connectors?view=graph-rest-1.0
+      summary: Get connectors from print
+      description: The list of available print connectors.
       operationId: print_ListConnector
       parameters:
         - $ref: '#/components/parameters/top'
@@ -524,11 +521,8 @@ paths:
     get:
       tags:
         - print.printer
-      summary: List printers
-      description: Retrieve the list of **printers** that are registered in the tenant.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-list-printers?view=graph-rest-1.0
+      summary: Get printers from print
+      description: The list of printers registered in the tenant.
       operationId: print_ListPrinter
       parameters:
         - $ref: '#/components/parameters/top'
@@ -779,11 +773,8 @@ paths:
     get:
       tags:
         - print.printer
-      summary: List printConnectors for a printer
-      description: Retrieve a list of printConnectors associated with the printer.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printer-list-connectors?view=graph-rest-1.0
+      summary: Get connectors from print
+      description: The connectors that are associated with the printer.
       operationId: print.printer_ListConnector
       parameters:
         - name: printer-id
@@ -954,10 +945,6 @@ paths:
       tags:
         - print.Actions
       summary: Invoke action restoreFactoryDefaults
-      description: Restore a printer's default settings to the values specified by the manufacturer.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printer-restorefactorydefaults?view=graph-rest-1.0
       operationId: print.printer_restoreFactoryDefault
       parameters:
         - name: printer-id
@@ -978,11 +965,8 @@ paths:
     get:
       tags:
         - print.printer
-      summary: List printerShares for a printer
-      description: Retrieve a list of printer shares associated with the printer.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printer-list-shares?view=graph-rest-1.0
+      summary: Get shares from print
+      description: 'The list of printerShares that are associated with the printer. Currently, only one printerShare can be associated with the printer. Read-only. Nullable.'
       operationId: print.printer_ListShare
       parameters:
         - name: printer-id
@@ -1184,11 +1168,8 @@ paths:
     get:
       tags:
         - print.printer
-      summary: List taskTriggers
-      description: 'Retrieve a list of task triggers associated with the printer. The list of task triggers defines which tasks will be triggered as a result of events that occur during printing. For details about how to use this API to add pull printing support to Universal Print, see Extending Universal Print to support pull printing.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printer-list-tasktriggers?view=graph-rest-1.0
+      summary: Get taskTriggers from print
+      description: A list of task triggers that are associated with the printer.
       operationId: print.printer_ListTaskTrigger
       parameters:
         - name: printer-id
@@ -1258,11 +1239,7 @@ paths:
     post:
       tags:
         - print.printer
-      summary: Create printTaskTrigger
-      description: 'Create a new task trigger on the specified printer. Currently, only **one** task trigger can be specified per printer, but this limit might be removed in the future. '
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printer-post-tasktriggers?view=graph-rest-1.0
+      summary: Create new navigation property to taskTriggers for print
       operationId: print.printer_CreateTaskTrigger
       parameters:
         - name: printer-id
@@ -1527,10 +1504,6 @@ paths:
       tags:
         - print.Actions
       summary: Invoke action create
-      description: 'Create (register) a printer with the Universal Print service. This is a long-running operation and as such, it returns a printerCreateOperation that can be used to track and verify the registration of the printer. For help creating the required Certificate Signing Request (CSR) for creating printer, see the CSR generation code sample.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printer-create?view=graph-rest-1.0
       operationId: print.printer_create
       requestBody:
         description: Action parameters
@@ -1570,11 +1543,8 @@ paths:
     get:
       tags:
         - print.printService
-      summary: List printServices
-      description: Retrieve a list of **printService** objects that represent the services available to your tenant.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-list-services?view=graph-rest-1.0
+      summary: Get services from print
+      description: The list of available Universal Print service endpoints.
       operationId: print_ListService
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1765,11 +1735,8 @@ paths:
     get:
       tags:
         - print.printService
-      summary: List endpoints
-      description: Retrieve a list of endpoints exposed by a print service.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printservice-list-endpoints?view=graph-rest-1.0
+      summary: Get endpoints from print
+      description: Endpoints that can be used to access the service. Read-only. Nullable.
       operationId: print.service_ListEndpoint
       parameters:
         - name: printService-id
@@ -2041,11 +2008,8 @@ paths:
     get:
       tags:
         - print.printerShare
-      summary: List shares
-      description: Retrieve a list of **printerShares**.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-list-shares?view=graph-rest-1.0
+      summary: Get shares from print
+      description: The list of printer shares registered in the tenant.
       operationId: print_ListShare
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2140,11 +2104,7 @@ paths:
     post:
       tags:
         - print.printerShare
-      summary: Create printerShare
-      description: Create a new **printerShare** for the specified printer.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-post-shares?view=graph-rest-1.0
+      summary: Create new navigation property to shares for print
       operationId: print_CreateShare
       requestBody:
         description: New navigation property
@@ -2292,11 +2252,8 @@ paths:
     get:
       tags:
         - print.printerShare
-      summary: List allowedGroups
-      description: Retrieve a list of groups that have been granted access to submit print jobs to the associated printerShare.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printershare-list-allowedgroups?view=graph-rest-1.0
+      summary: Get allowedGroups from print
+      description: The groups whose users have access to print using the printer.
       operationId: print.share_ListAllowedGroup
       parameters:
         - name: printerShare-id
@@ -2597,11 +2554,8 @@ paths:
     get:
       tags:
         - print.printerShare
-      summary: List allowedGroups
-      description: Retrieve a list of groups that have been granted access to submit print jobs to the associated printerShare.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printershare-list-allowedgroups?view=graph-rest-1.0
+      summary: Get ref of allowedGroups from print
+      description: The groups whose users have access to print using the printer.
       operationId: print.share_ListAllowedGroupGraphBPreRef
       parameters:
         - name: printerShare-id
@@ -2743,11 +2697,8 @@ paths:
     get:
       tags:
         - print.printerShare
-      summary: List allowedUsers
-      description: Retrieve a list of users who have been granted access to submit print jobs to the associated printerShare.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printershare-list-allowedusers?view=graph-rest-1.0
+      summary: Get allowedUsers from print
+      description: The users who have access to print using the printer.
       operationId: print.share_ListAllowedUser
       parameters:
         - name: printerShare-id
@@ -3297,11 +3248,8 @@ paths:
     get:
       tags:
         - print.printerShare
-      summary: List allowedUsers
-      description: Retrieve a list of users who have been granted access to submit print jobs to the associated printerShare.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printershare-list-allowedusers?view=graph-rest-1.0
+      summary: Get ref of allowedUsers from print
+      description: The users who have access to print using the printer.
       operationId: print.share_ListAllowedUserGraphBPreRef
       parameters:
         - name: printerShare-id
@@ -3599,11 +3547,8 @@ paths:
     get:
       tags:
         - print.printTaskDefinition
-      summary: List taskDefinitions
-      description: 'Retrieve a list of task definitions that the requesting app defined in the tenant. For details about how to use this API to add pull printing support to Universal Print, see Extending Universal Print to support pull printing.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-list-taskdefinitions?view=graph-rest-1.0
+      summary: Get taskDefinitions from print
+      description: List of abstract definition for a task that can be triggered when various events occur within Universal Print.
       operationId: print_ListTaskDefinition
       parameters:
         - $ref: '#/components/parameters/top'
@@ -3668,11 +3613,7 @@ paths:
     post:
       tags:
         - print.printTaskDefinition
-      summary: Create printTaskDefinition
-      description: 'Create a new task definition. For details about how to use this API to add pull printing support to Universal Print, see Extending Universal Print to support pull printing.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/print-post-taskdefinitions?view=graph-rest-1.0
+      summary: Create new navigation property to taskDefinitions for print
       operationId: print_CreateTaskDefinition
       requestBody:
         description: New navigation property
@@ -3806,11 +3747,8 @@ paths:
     get:
       tags:
         - print.printTaskDefinition
-      summary: List tasks
-      description: 'Retrieve a list of tasks associated with a task definition. For details about how to use this API to add pull printing support to Universal Print, see Extending Universal Print to support pull printing.'
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/printtaskdefinition-list-tasks?view=graph-rest-1.0
+      summary: Get tasks from print
+      description: A list of tasks that have been created based on this definition. The list includes currently running tasks and recently completed tasks. Read-only.
       operationId: print.taskDefinition_ListTask
       parameters:
         - name: printTaskDefinition-id
@@ -14119,7 +14057,7 @@ components:
               nullable: true
             notificationUrl:
               type: string
-              description: Required. The URL of the endpoint that will receive the change notifications. This URL must make use of the HTTPS protocol.
+              description: Required. The URL of the endpoint that will receive the change notifications. This URL must make use of the HTTPS protocol. Any query string parameter included in the notificationUrl property will be included in the HTTP POST request when Microsoft Graph sends the change notifications.
             notificationUrlAppId:
               type: string
               description: Optional. The app ID that the subscription service can use to generate the validation token. This allows the client to validate the authenticity of the notification received.
@@ -16159,7 +16097,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.directoryObject'
-              description: 'The user that cloud joined the device or registered their personal device. The registered owner is set at the time of registration. Currently, there can be only one owner. Read-only. Nullable. Supports $expand.'
+              description: The user that cloud joined the device or registered their personal device. The registered owner is set at the time of registration. Read-only. Nullable. Supports $expand.
               x-ms-navigationProperty: true
             registeredUsers:
               type: array
