--- a/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
+++ b/openApiDocs/v1.0/Devices.ServiceAnnouncement.yml
@@ -11,10 +11,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action publish
-      description: Publish the specified browserSiteList for devices to download.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/browsersitelist-publish?view=graph-rest-1.0
       operationId: admin.edge.internetExplorerMode.siteList_publish
       parameters:
         - name: browserSiteList-id
@@ -147,11 +143,8 @@ paths:
     get:
       tags:
         - admin.serviceAnnouncement
-      summary: List healthOverviews
-      description: Retrieve the serviceHealth resources from the **healthOverviews** navigation property. This operation provides the health report of all subscribed services for a tenant.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-healthoverviews?view=graph-rest-1.0
+      summary: Get healthOverviews from admin
+      description: 'A collection of service health information for tenant. This property is a contained navigation property, it is nullable and readonly.'
       operationId: admin.serviceAnnouncement_ListHealthOverview
       parameters:
         - $ref: '#/components/parameters/top'
@@ -711,11 +704,8 @@ paths:
     get:
       tags:
         - admin.serviceAnnouncement
-      summary: List issues
-      description: Retrieve serviceHealthIssue resources from the **issues** navigation property. This operation retrieves information about all service health issues that exist for the tenant.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-issues?view=graph-rest-1.0
+      summary: Get issues from admin
+      description: 'A collection of service issues for tenant. This property is a contained navigation property, it is nullable and readonly.'
       operationId: admin.serviceAnnouncement_ListIssue
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1004,11 +994,8 @@ paths:
     get:
       tags:
         - admin.serviceAnnouncement
-      summary: List serviceAnnouncement messages
-      description: Retrieve the serviceUpdateMessage resources from the **messages** navigation property. This operation retrieves all service update messages that exist for the tenant.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-messages?view=graph-rest-1.0
+      summary: Get messages from admin
+      description: 'A collection of service messages for tenant. This property is a contained navigation property, it is nullable and readonly.'
       operationId: admin.serviceAnnouncement_ListMessage
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1259,11 +1246,8 @@ paths:
     get:
       tags:
         - admin.serviceAnnouncement
-      summary: List attachments
-      description: Get the list of attachments associated with a service message.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-list-attachments?view=graph-rest-1.0
+      summary: Get attachments from admin
+      description: A collection of serviceAnnouncementAttachments.
       operationId: admin.serviceAnnouncement.message_ListAttachment
       parameters:
         - name: serviceUpdateMessage-id
@@ -1513,9 +1497,6 @@ paths:
         - admin.serviceAnnouncement
       summary: Get content for the navigation property attachments from admin
       description: The attachment content.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-list-attachments?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_GetAttachmentsContent
       parameters:
         - name: serviceUpdateMessage-id
@@ -1614,9 +1595,6 @@ paths:
         - admin.serviceAnnouncement
       summary: Get attachmentsArchive for the navigation property messages from admin
       description: The zip file that contains all attachments for a message.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceannouncement-list-messages?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement_GetMessagesAttachmentsArchive
       parameters:
         - name: serviceUpdateMessage-id
@@ -1686,10 +1664,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action archive
-      description: Archive a list of serviceUpdateMessages for the signed in user.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-archive?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_archive
       requestBody:
         description: Action parameters
@@ -1728,10 +1702,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action favorite
-      description: Change the status of a list of serviceUpdateMessages to favorite for the signed in user.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-favorite?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_favorite
       requestBody:
         description: Action parameters
@@ -1770,10 +1740,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action markRead
-      description: Mark a list of serviceUpdateMessages as **read** for the signed in user.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-markread?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_markRead
       requestBody:
         description: Action parameters
@@ -1812,10 +1778,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action markUnread
-      description: Mark a list of serviceUpdateMessages as **unread** for the signed in user.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-markunread?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_markUnread
       requestBody:
         description: Action parameters
@@ -1854,10 +1816,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action unarchive
-      description: Unarchive a list of serviceUpdateMessages for the signed in user.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-unarchive?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_unarchive
       requestBody:
         description: Action parameters
@@ -1896,10 +1854,6 @@ paths:
       tags:
         - admin.Actions
       summary: Invoke action unfavorite
-      description: Remove the favorite status of serviceUpdateMessages for the signed in user.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/serviceupdatemessage-unfavorite?view=graph-rest-1.0
       operationId: admin.serviceAnnouncement.message_unfavorite
       requestBody:
         description: Action parameters
