--- a/openApiDocs/v1.0/Search.yml
+++ b/openApiDocs/v1.0/Search.yml
@@ -74,11 +74,7 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: List externalConnections
-      description: Get a list of the externalConnection objects and their properties.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalconnectors-externalconnection-list?view=graph-rest-1.0
+      summary: Get connections from external
       operationId: external_ListConnection
       parameters:
         - $ref: '#/components/parameters/top'
@@ -155,11 +151,7 @@ paths:
     post:
       tags:
         - external.externalConnection
-      summary: Create externalConnection
-      description: Create a new externalConnection object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalconnectors-external-post-connections?view=graph-rest-1.0
+      summary: Create new navigation property to connections for external
       operationId: external_CreateConnection
       requestBody:
         description: New navigation property
@@ -373,11 +365,7 @@ paths:
     post:
       tags:
         - external.externalConnection
-      summary: Create externalGroup
-      description: Create a new externalGroup object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalconnectors-externalconnection-post-groups?view=graph-rest-1.0
+      summary: Create new navigation property to groups for external
       operationId: external.connection_CreateGroup
       parameters:
         - name: externalConnection-id
@@ -620,11 +608,7 @@ paths:
     post:
       tags:
         - external.externalConnection
-      summary: Create identity
-      description: Create an identity resource for a new member in an externalGroup.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalconnectors-externalgroup-post-members?view=graph-rest-1.0
+      summary: Create new navigation property to members for external
       operationId: external.connection.group_CreateMember
       parameters:
         - name: externalConnection-id
@@ -1390,11 +1374,7 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get schema
-      description: Read the properties and relationships of a schema object.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/externalconnectors-schema-get?view=graph-rest-1.0
+      summary: Get schema from external
       operationId: external.connection_GetSchema
       parameters:
         - name: externalConnection-id
@@ -2012,6 +1992,7 @@ components:
           description: The search query containing the search terms. Required.
         queryTemplate:
           type: string
+          description: Provides a way to decorate the query string. Supports both KQL and query variables. Optional.
           nullable: true
       additionalProperties:
         type: object
